--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,8 +12,14 @@ body{
     font-family: SF Outer Limits, Arial, Helvetica, sans-serif;
 }
 
+
 .seriesList{
     background-color: black;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.25rem;
+}
+
+.carousel{
+    height: 20rem;
 }
